tests/NormalTests/paczka1/small_fuzzy/19428794.err
Error in line 3: uRubglbKIv A64; 4,6
Error in line 4: uRubglbKIv A641 61,4
Error in line 8: eFZ I195 81,5
Error in line 7: eFZ S404 52,5
